Add auth0 athentication

--- a/src/training_diary_API/appsettings.json
+++ b/src/training_diary_API/appsettings.json
@@ -7,6 +7,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "dev-akqrikut.eu.auth0.com",
+    "Audience": "https://trainingdiary.com",
+  },
   "ConnectionStrings": {
     "TrainingDiaryDatabase": "Server=localhost\\SQLEXPRESS;Database=training_diary_db;Trusted_Connection=True;"
   }
