Remove underscores from names, Add migrations

--- a/src/training_diary_API/appsettings.json
+++ b/src/training_diary_API/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "https://trainingdiary.com",
   },
   "ConnectionStrings": {
-    "TrainingDiaryDatabase": "Server=localhost\\SQLEXPRESS;Database=training_diary_db;Trusted_Connection=True;"
+    "TrainingDiaryDatabase": "Server=localhost\\SQLEXPRESS;Database=tddb;Trusted_Connection=True;"
   }
 }
